--- a/AKautoBluestack.cfg
+++ b/AKautoBluestack.cfg
@@ -7,57 +7,13 @@
     },
     "ControlSchemes" : [
         {
-            "Name" : "Default (Edited)",
+            "Name" : "AKAuto",
             "BuiltIn" : false,
             "Selected" : true,
             "IsBookMarked" : false,
             "IsCategoryVisible" : true,
             "KeyboardLayout" : "United States - india",
             "GameControls" : [
-                {
-                    "$type" : "Tap, Bluestacks",
-                    "Type" : "Tap",
-                    "Tweaks" : 0,
-                    "Exclusive" : false,
-                    "ExclusiveDelay" : 200,
-                    "XExpr" : "",
-                    "YExpr" : "",
-                    "XOverlayOffset" : "",
-                    "YOverlayOffset" : "",
-                    "StartCondition" : "",
-                    "EnableCondition" : "",
-                    "ShowOnOverlay" : true,
-                    "X" : 93.79,
-                    "Y" : 7.07,
-                    "Key" : "W",
-                    "Key_alt1" : "",
-                    "GuidanceCategory" : "",
-                    "Guidance" : {
-
-                    }
-                },
-                {
-                    "$type" : "Tap, Bluestacks",
-                    "Type" : "Tap",
-                    "Tweaks" : 0,
-                    "Exclusive" : false,
-                    "ExclusiveDelay" : 200,
-                    "XExpr" : "",
-                    "YExpr" : "",
-                    "XOverlayOffset" : "",
-                    "YOverlayOffset" : "",
-                    "StartCondition" : "",
-                    "EnableCondition" : "",
-                    "ShowOnOverlay" : true,
-                    "X" : 85.04,
-                    "Y" : 6.86,
-                    "Key" : "Space",
-                    "Key_alt1" : "",
-                    "GuidanceCategory" : "",
-                    "Guidance" : {
-
-                    }
-                },
                 {
                     "$type" : "Tap, Bluestacks",
                     "Type" : "Tap",
@@ -162,6 +118,28 @@
                     "X" : 72.8,
                     "Y" : 68.27,
                     "Key" : "U",
+                    "Key_alt1" : "",
+                    "GuidanceCategory" : "",
+                    "Guidance" : {
+
+                    }
+                },
+                {
+                    "$type" : "Tap, Bluestacks",
+                    "Type" : "Tap",
+                    "Tweaks" : 0,
+                    "Exclusive" : false,
+                    "ExclusiveDelay" : 200,
+                    "XExpr" : "",
+                    "YExpr" : "",
+                    "XOverlayOffset" : "",
+                    "YOverlayOffset" : "",
+                    "StartCondition" : "",
+                    "EnableCondition" : "",
+                    "ShowOnOverlay" : true,
+                    "X" : 50.0,
+                    "Y" : 50.27,
+                    "Key" : "A",
                     "Key_alt1" : "",
                     "GuidanceCategory" : "",
                     "Guidance" : {
